--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css">
+  <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css"> -->
   <script type="text/javascript" src="data/articles.json"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
-    <h1>Hello World</h1>
     <div class="container">
         <ul id="article-list">
+            <li class="header"><div class="header-title column">Unpublished Articles</div><div class="header-author column">Author</div><div class="header-words column">Words</div><div class="header-submitted column">Submitted</div></li>
         </ul>
         <button id="paginate-button">More Articles</button>
     </div>
