--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <ul id="article-list">
-            <li class="header"><div class="header-title column">Unpublished Articles</div><div class="header-author column">Author</div><div class="header-words column">Words</div><div class="header-submitted column">Submitted</div></li>
+            <li class="header"><div class="header-title column">Unpublished Articles</div><div class="header-author column">Author</div><div id="words" class="header-words column">Words</div><div id="submitted" class="header-submitted column">Submitted</div></li>
         </ul>
         <button id="paginate-button">More Articles</button>
     </div>
