--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/styles.css">
   <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="data/articles.json"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="js/article.js"></script>
+  <script type="text/javascript" src="js/sort.js"></script>
 </head>
 
 <body>
