improved styling for row borders and header gradient

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <ul id="article-list">
-            <li class="header"><div class="header-title column"><span class="header-title-span">Unpublished Articles</span></div><div class="header-author column">Author</div><div id="words" class="header-words column">Words</div><div id="submitted" class="header-submitted column">Submitted</div></li>
+            <li class="header"><div class="header-title column"><span>Unpublished Articles</span></div><div class="header-author column"><span>Author</span></div><div id="words" class="header-words column"><span>Words</span></div><div id="submitted" class="header-submitted column"><span>Submitted</span></div></li>
         </ul>
     </div>
     <button id="paginate-button">More Articles</button>
