added button styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="article-container">
         <ul id="article-list">
-            <li class="header"><div class="header-title column"><span>Unpublished Articles</span></div><div class="header-author column"><span>Author</span></div><div id="words" class="header-words column"><span>Words</span></div><div id="submitted" class="header-submitted column"><span class="submitted-span">Submitted</span></div></li>
+            <li class="header"><div class="header-title column"><span>Unpublished Articles</span></div><div class="header-author column"><span>Author</span></div><div id="words" class="header-words column"><span class="sort">Words</span></div><div id="submitted" class="header-submitted column"><span class="submitted-span sort">Submitted</span></div></li>
         </ul>
     </div>
-    <button id="paginate-button">More Articles</button>
+    <div class="button-container">
+        <button id="paginate-button">More Articles</button>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
